Add "add to Homescreen" button
Signed-off-by: Raphael Höser <raphael@hoeser.info>

--- a/src/_includes/partials/header.njk
+++ b/src/_includes/partials/header.njk
@@ -10,9 +10,6 @@
         activeAnchorClass: "current"
       }) | safe }}
     </nav>
-    <!-- <nav>
-      <a href="/">Home</a>
-      <a href="/blog">Blog</a>
-    </nav> -->
+    <pwa-installer></pwa-installer>
   </div>
 </header>
