--- a/src/_includes/layouts/main.njk
+++ b/src/_includes/layouts/main.njk
@@ -24,18 +24,7 @@
     <style>
       {% include "../../css/critical.css" %}
     </style>
-    <script defer>
-      if ('serviceWorker' in navigator) {
-        navigator.serviceWorker.register('/sw.js', {scope: '/'})
-        .then((reg) => {
-          // registration worked
-          console.log('Registration succeeded. Scope is ' + reg.scope);
-        }).catch((error) => {
-          // registration failed
-          console.log('Registration failed with ' + error);
-        });
-      }
-    </script>
+    {% rollup "assets/js/common.ts" %}
     {% favicon meta.favicon %}
   </head>
   <!--
