--- a/src/manifest.json.njk
+++ b/src/manifest.json.njk
@@ -3,8 +3,8 @@ permalink: /manifest.json
 sitemapIgnore: true
 ---
 {
-  "name": "{{ meta.site_name }}",
-  "short_name": "{{ meta.site_short_name }}",
+  "name": "{{ meta.site_name | safe }}",
+  "short_name": "{{ meta.site_short_name | safe }}",
   "description": "{{ meta.description }}",
   "background_color": "#333",
   "theme_color": "{{ meta.theme_color }}",
@@ -30,5 +30,9 @@ sitemapIgnore: true
     }{% if not(loop.last and outerLoop.last) %},{%endif-%}
     {% endfor -%}
   {% endfor %}
-  ]
+  ],
+  "related_applications": [{
+    "platform": "webapp",
+    "url": "{{meta.url}}manifest.json"
+  }]
 }
