Avoid Layout shifts with PWA install button
Signed-off-by: Raphael Höser <raphael@hoeser.info>

--- a/src/_includes/layouts/main.njk
+++ b/src/_includes/layouts/main.njk
@@ -54,6 +54,7 @@
   <body style="{% if theme.linkColor %}--theme-link-color: {{theme.linkColor}};{% endif %}--theme-color-a: {{theme.colorA or "#5df"}};--theme-color-b: {{theme.colorB or "#f39"}}">
     {% include "../partials/header.njk" %}
     {{ content | safe }}
+    <pwa-installer></pwa-installer>
     {% include "../partials/footer.njk" %}
   </body>
 </html>
