increase pwa install margin again

--- a/src/css/critical.css
+++ b/src/css/critical.css
@@ -20,7 +20,7 @@
 pwa-installer {
   position: fixed;
   bottom: 0;
-  margin: .5rem;
+  margin: 1rem;
   align-self: flex-end;
   z-index: 1000;
 }
