--- a/src/_includes/layouts/main.njk
+++ b/src/_includes/layouts/main.njk
@@ -6,7 +6,7 @@
     <link rel="alternate" type="application/atom+xml" href="{{meta.feedUrl}}">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="{{metaDescription or "This is the blog of Snapstromegon (Raphael Höser) where I chat about web technologies and web development." }}" />
-    <meta name="theme-color" content="{{ theme.colorA}}"/>
+    <meta name="theme-color" content="{{ meta.theme_color}}"/>
     <meta name="twitter:title" content="{{ title }}" />
     <meta name="twitter:description" content="{{ description }}" />
     <meta name="twitter:site" content="@Snapstromegon" />
@@ -51,7 +51,7 @@
     <3
     Raphael
   -->
-  <body style="{% if theme.linkColor %}--theme-link-color: {{theme.linkColor}};{% endif %}--theme-color-a: {{theme.colorA or "#5df"}};--theme-color-b: {{theme.colorB or "#f39"}}">
+  <body style="{% if theme.darkLinkColor %}--dark-theme-link-color: {{theme.darkLinkColor}};{% endif %}{% if theme.linkColor %}--theme-link-color: {{theme.linkColor}};{% endif %}--theme-color-a: {{theme.colorA or "#5df"}};--theme-color-b: {{theme.colorB or "#f39"}}">
     {% include "../partials/header.njk" %}
     {{ content | safe }}
     <pwa-installer></pwa-installer>
