--- a/src/manifest.json.njk
+++ b/src/manifest.json.njk
@@ -33,6 +33,6 @@ sitemapIgnore: true
   ],
   "related_applications": [{
     "platform": "webapp",
-    "url": "{{meta.url}}manifest.json"
+    "url": "{{meta.url}}/manifest.json"
   }]
 }
