--- a/src/_includes/layouts/main.njk
+++ b/src/_includes/layouts/main.njk
@@ -5,12 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <link rel="alternate" type="application/atom+xml" href="{{meta.feedUrl}}">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="{{metaDescription or "This is the blog of Snapstromegon (Raphael Höser) where I chat about web technologies and web development." }}" />
+    <meta name="description" content="{{description or "This is the blog of Snapstromegon (Raphael Höser) where I chat about web technologies and web development." }}" />
     <meta name="theme-color" content="{{ meta.theme_color}}"/>
     <meta name="twitter:title" content="{{ title }}" />
     <meta name="twitter:description" content="{{ description }}" />
     <meta name="twitter:site" content="@Snapstromegon" />
     <meta name="twitter:creator" content="@Snapstromegon" />
+    <meta name="twitter:card" content="summary_large_image">
     <meta name="author" content="Raphael Höser">
     <meta name="publisher" content="Raphael Höser">
     <meta name="copyright" content="Raphael Höser">
