Try correcting twitter share cards
Signed-off-by: Raphael Höser <raphael@hoeser.info>

--- a/src/_includes/layouts/main.njk
+++ b/src/_includes/layouts/main.njk
@@ -7,11 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="{{description or "This is the blog of Snapstromegon (Raphael Höser) where I chat about web technologies and web development." }}" />
     <meta name="theme-color" content="{{ meta.theme_color}}"/>
-    <meta name="twitter:title" content="{{ title }}" />
-    <meta name="twitter:description" content="{{ description }}" />
+    <meta name="og:title" content="{{ title }}" />
+    <meta name="og:description" content="{{ description }}" />
+    <meta name="og:type" content="summary">
     <meta name="twitter:site" content="@Snapstromegon" />
     <meta name="twitter:creator" content="@Snapstromegon" />
-    <meta name="twitter:card" content="summary_large_image">
     <meta name="author" content="Raphael Höser">
     <meta name="publisher" content="Raphael Höser">
     <meta name="copyright" content="Raphael Höser">
