The card validator tool is weired
Signed-off-by: Raphael Höser <raphael@hoeser.info>

--- a/src/_includes/layouts/main.njk
+++ b/src/_includes/layouts/main.njk
@@ -8,6 +8,7 @@
     <meta name="description" content="{{description or "This is the blog of Snapstromegon (Raphael Höser) where I chat about web technologies and web development." }}" />
     <meta name="theme-color" content="{{ meta.theme_color}}"/>
     <meta name="og:title" content="{{ title }}" />
+    <meta name="twitter:text:title" content="{{ title }}" />
     <meta name="og:description" content="{{ description }}" />
     <meta name="og:type" content="summary">
     <meta name="twitter:site" content="@Snapstromegon" />
