retry twitter to like me
Signed-off-by: Raphael Höser <raphael@hoeser.info>

--- a/src/_includes/layouts/main.njk
+++ b/src/_includes/layouts/main.njk
@@ -8,19 +8,22 @@
     <meta name="description" content="{{description or "This is the blog of Snapstromegon (Raphael Höser) where I chat about web technologies and web development." }}" />
     <meta name="theme-color" content="{{ meta.theme_color}}"/>
     <meta name="og:title" content="{{ title }}" />
-    <meta name="twitter:text:title" content="{{ title }}" />
+    <meta name="og:type" content="summary" />
     <meta name="og:description" content="{{ description }}" />
-    <meta name="og:type" content="summary">
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:text:title" content="{{ title }}" />
+    <meta name="twitter:title" content="{{ title }}" />
+    <meta name="twitter:description" content="{{ description }}" />
     <meta name="twitter:site" content="@Snapstromegon" />
     <meta name="twitter:creator" content="@Snapstromegon" />
-    <meta name="author" content="Raphael Höser">
-    <meta name="publisher" content="Raphael Höser">
-    <meta name="copyright" content="Raphael Höser">
-    <meta name="page-topic" content="Bildung">
-    <meta name="page-type" content="Private Homepage">
-    <meta name="audience" content="Fortgeschrittene">
-    <meta name="robots" content="index, follow">
-    <meta http-equiv="content-language" content="en">
+    <meta name="author" content="Raphael Höser" />
+    <meta name="publisher" content="Raphael Höser"/>
+    <meta name="copyright" content="Raphael Höser"/>
+    <meta name="page-topic" content="Bildung"/>
+    <meta name="page-type" content="Private Homepage"/>
+    <meta name="audience" content="Fortgeschrittene"/>
+    <meta name="robots" content="index, follow"/>
+    <meta http-equiv="content-language" content="en"/>
     <link rel="manifest" href="/manifest.json">
     <title>Snapstromegon - {{title or eleventyNavigation.key or "Blog"}}</title>
     <style>
