--- a/src/_includes/layouts/main.njk
+++ b/src/_includes/layouts/main.njk
@@ -5,15 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <link rel="alternate" type="application/atom+xml" href="{{meta.feedUrl}}">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="{{description or "This is the blog of Snapstromegon (Raphael Höser) where I chat about web technologies and web development." }}" />
+    <meta name="description" content="{{description or meta.description }}" />
     <meta name="theme-color" content="{{ meta.theme_color}}"/>
-    <meta name="og:title" content="{{ title }}" />
+    <meta name="og:title" content="{{ title or meta.site_name + " - " + eleventyNavigation.key }}" />
     <meta name="og:type" content="summary" />
-    <meta name="og:description" content="{{ description }}" />
+    <meta name="og:description" content="{{ description or meta.description }}" />
     <meta name="twitter:card" content="summary" />
-    <meta name="twitter:text:title" content="{{ title }}" />
-    <meta name="twitter:title" content="{{ title }}" />
-    <meta name="twitter:description" content="{{ description }}" />
+    <meta name="twitter:text:title" content="{{ title or meta.site_name + " - " + eleventyNavigation.key }}" />
+    <meta name="twitter:title" content="{{ title or meta.site_name + " - " + eleventyNavigation.key }}" />
+    <meta name="twitter:description" content="{{ description or meta.description }}" />
     <meta name="twitter:site" content="@Snapstromegon" />
     <meta name="twitter:creator" content="@Snapstromegon" />
     <meta name="author" content="Raphael Höser" />
