Add generator info to pages
Signed-off-by: Raphael Höser <raphael@hoeser.info>

--- a/src/_includes/layouts/main.njk
+++ b/src/_includes/layouts/main.njk
@@ -24,6 +24,7 @@
     <meta name="audience" content="Fortgeschrittene"/>
     <meta name="robots" content="index, follow"/>
     <meta http-equiv="content-language" content="en"/>
+    <meta name="generator" content="{{ eleventy.generator }}">
     <link rel="manifest" href="/manifest.json">
     <title>Snapstromegon - {{title or eleventyNavigation.key or "Blog"}}</title>
     <style>
