--- a/src/_includes/layouts/main.njk
+++ b/src/_includes/layouts/main.njk
@@ -64,15 +64,15 @@
     {% include "../partials/footer.njk" %}
 
     <!-- Matomo -->
-    <script>
+    <!-- <script>
       var _paq = window._paq = window._paq || [];
       /* tracker methods like "setCustomDimension" should be called before "trackPageView" */
       _paq.push(['trackPageView']);
       _paq.push(['enableLinkTracking']);
       _paq.push(['setTrackerUrl', 'https://matomo.hoeser.dev/matomo.php']);
       _paq.push(['setSiteId', '1']);
-    </script>
-    <script src="https://matomo.hoeser.dev/matomo.js" defer></script>
+    </script> -->
+    <!-- <script src="https://matomo.hoeser.dev/matomo.js" defer></script> -->
     <!-- End Matomo Code -->
   </body>
 </html>
