--- a/src/_includes/partials/footer.njk
+++ b/src/_includes/partials/footer.njk
@@ -33,9 +33,9 @@
         </ul>
       </section>
     </div>
-    <div class="textWidth">
+    <!-- <div class="textWidth">
       <h2>Tracking</h2>
       <matomo-opt-out matomo-url="https://matomo.hoeser.dev/"></matomo-opt-out>
-    </div>
+    </div> -->
   </div>
 </footer>
