--- a/src/_includes/partials/footer.njk
+++ b/src/_includes/partials/footer.njk
@@ -20,15 +20,15 @@
         <ul>
           <li>
             Twitter:
-            <a target="_blank" rel="noopener" href="https://twitter.com/Snapstromegon">@Snapstromegon</a>
+            <a target="_blank" aria-label="Twitter Account (@Snapstromegon)" rel="noopener" href="https://twitter.com/Snapstromegon">@Snapstromegon</a>
           </li>
           <li>
-            Github:
-            <a target="_blank" rel="noopener" href="https://github.com/Snapstromegon">@Snapstromegon</a>
+            GitHub:
+            <a target="_blank" aria-label="GitHub Account (Snapstromegon)" rel="noopener" href="https://github.com/Snapstromegon">Snapstromegon</a>
           </li>
           <li>
             Reddit:
-            <a target="_blank" rel="noopener" href="https://www.reddit.com/user/Snapstromegon">u/Snapstromegon</a>
+            <a target="_blank" aria-label="Reddit Account (u/Snapstromegon)" rel="noopener" href="https://www.reddit.com/user/Snapstromegon">u/Snapstromegon</a>
           </li>
         </ul>
       </section>
