--- a/src/_includes/partials/header.njk
+++ b/src/_includes/partials/header.njk
@@ -1,4 +1,4 @@
-<header>
+<aside>
   <div class="content">
     <a href="/" id="logo">
       {% include "../../../assets/img/hummingbird_clean.svg" %}
@@ -11,4 +11,4 @@
       }) | safe }}
     </nav>
   </div>
-</header>
+</aside>
