--- a/src/_includes/layouts/webdev-sins.njk
+++ b/src/_includes/layouts/webdev-sins.njk
@@ -8,7 +8,7 @@ eleventyComputed:
   {% include "../../css/syntax_highlighting.css" %}
 </style>
 
-<section class="devider">
+<header>
   <div class="content blog_devider">
     <div>
       <h1>{{ title }}</h1>
@@ -40,7 +40,7 @@ eleventyComputed:
       </div>
     </div>
   </div>
-</section>
+</header>
 <main>
   <div class="content">
     <article>
