--- a/src/css/critical.css
+++ b/src/css/critical.css
@@ -46,12 +46,12 @@ body {
   background: var(--background-color);
 }
 
-header {
+aside {
   position: relative;
   padding: var(--xxl) 0;
 }
 
-header::before {
+aside::before {
   content: "";
   height: var(--xs);
   width: 100%;
@@ -68,13 +68,13 @@ header::before {
   left: 0;
 }
 
-header img,
-header svg {
+aside img,
+aside svg {
   height: 10rem;
   width: 10rem;
 }
 
-header #logo {
+aside #logo {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -82,30 +82,30 @@ header #logo {
   text-decoration: none;
 }
 
-header #logo span {
+aside #logo span {
   text-transform: uppercase;
   letter-spacing: var(--xxs);
 }
 
-header svg {
+aside svg {
   transform: scaleX(-100%);
   stroke-linejoin: round;
 }
 
-header svg .colorA {
+aside svg .colorA {
   fill: var(--theme-color-a);
   stroke: var(--theme-color-a);
   stroke-width: 1px;
 }
 
-header svg .colorB {
+aside svg .colorB {
   opacity: calc(var(--progress));
   fill: var(--theme-color-b);
   stroke: var(--theme-color-b);
   stroke-width: 1px;
 }
 
-header .content {
+aside .content {
   display: flex;
   align-items: center;
   gap: var(--xxl);
@@ -113,25 +113,25 @@ header .content {
   justify-content: center;
 }
 
-header nav {
+aside nav {
   flex-grow: 1;
 }
 
-header nav ul {
+aside nav ul {
   display: flex;
   gap: var(--xxl);
   flex-wrap: wrap;
 }
 
-header nav ul {
+aside nav ul {
   list-style: none;
 }
 
-header nav ul ul {
+aside nav ul ul {
   display: none;
 }
 
-header nav a {
+aside nav a {
   text-transform: uppercase;
   text-decoration: none;
   color: var(--text-color);
@@ -140,13 +140,13 @@ header nav a {
   padding: var(--m) 0 var(--m) var(--s);
 }
 
-header nav a:first-letter {
+aside nav a:first-letter {
   letter-spacing: 0;
   color: #f00;
 }
 
-header nav a:hover::after,
-header nav a.current::after {
+aside nav a:hover::after,
+aside nav a.current::after {
   position: absolute;
   bottom: 0;
   content: "";
@@ -163,7 +163,7 @@ header nav a.current::after {
   padding: 0 var(--m);
 }
 
-.devider,
+header,
 footer {
   padding: var(--xxl) 0;
   background: #333;
@@ -180,7 +180,7 @@ footer {
   position: relative;
 }
 
-.devider::after {
+header::after {
   content: "";
   height: var(--xs);
   width: 100%;
@@ -197,17 +197,17 @@ footer {
   left: 0;
 }
 
-.devider h1 {
+body header h1 {
   font-size: var(--xxl);
   max-width: 50rem;
 }
 
-.devider a {
+body header a {
   color: inherit;
   text-decoration: none;
 }
 
-.devider .abstract {
+header .abstract {
   max-width: 30rem;
 }
 
@@ -548,7 +548,7 @@ body a {
 }
 
 @media (min-width: 50rem) {
-  .devider h1 {
+  header h1 {
     font-size: 4rem;
   }
 }
