Allow breaking title lines for safety
Signed-off-by: Raphael Höser <raphael@hoeser.info>

--- a/src/css/critical.css
+++ b/src/css/critical.css
@@ -283,6 +283,10 @@ main > .content > article pre,
   );
 }
 
+.blog_devider h1 {
+  word-break: break-word;
+}
+
 .blogpostList {
   margin: var(--xxl) 0;
   display: grid;
