--- a/src/_includes/layouts/blogpost.njk
+++ b/src/_includes/layouts/blogpost.njk
@@ -11,7 +11,7 @@ eleventyComputed:
 <header>
   <div class="content blog_devider">
     <div>
-      <h1>{{ title }}</h1>
+      <h1>{{ title | safe }}</h1>
       <p class="abstract">{{ abstract }}</p>
     </div>
     <div class="blogpost_overview">
