Add Mastodon link
Signed-off-by: Raphael Höser <raphael@hoeser.info>

--- a/src/_includes/partials/footer.njk
+++ b/src/_includes/partials/footer.njk
@@ -19,16 +19,20 @@
         <p>If you want to say hi, feel free to do so</p>
         <ul>
           <li>
+            Mastodon:
+            <a rel="me" target="_blank" aria-label="Mastodon Account (@raphael@social.hoeser.dev)" rel="noopener" href="https://social.hoeser.dev/@raphael">@raphael@social.hoeser.dev</a>
+          </li>
+          <li>
             Twitter:
-            <a target="_blank" aria-label="Twitter Account (@Snapstromegon)" rel="noopener" href="https://twitter.com/Snapstromegon">@Snapstromegon</a>
+            <a rel="me" target="_blank" aria-label="Twitter Account (@Snapstromegon)" rel="noopener" href="https://twitter.com/Snapstromegon">@Snapstromegon</a>
           </li>
           <li>
             GitHub:
-            <a target="_blank" aria-label="GitHub Account (Snapstromegon)" rel="noopener" href="https://github.com/Snapstromegon">Snapstromegon</a>
+            <a rel="me" target="_blank" aria-label="GitHub Account (Snapstromegon)" rel="noopener" href="https://github.com/Snapstromegon">Snapstromegon</a>
           </li>
           <li>
             Reddit:
-            <a target="_blank" aria-label="Reddit Account (u/Snapstromegon)" rel="noopener" href="https://www.reddit.com/user/Snapstromegon">u/Snapstromegon</a>
+            <a rel="me" target="_blank" aria-label="Reddit Account (u/Snapstromegon)" rel="noopener" href="https://www.reddit.com/user/Snapstromegon">u/Snapstromegon</a>
           </li>
         </ul>
       </section>
