Add some playing around with Mona Sans
Signed-off-by: Raphael Höser <raphael@hoeser.info>

--- a/src/_includes/partials/footer.njk
+++ b/src/_includes/partials/footer.njk
@@ -37,9 +37,9 @@
         </ul>
       </section>
     </div>
-    <!-- <div class="textWidth">
-      <h2>Tracking</h2>
-      <matomo-opt-out matomo-url="https://matomo.hoeser.dev/"></matomo-opt-out>
-    </div> -->
+    <div class="textWidth">
+      <h2>Legal</h2>
+      <p>This page uses "Mona Sans" (Copyright (c) 2022, GitHub). Check the License <a href="https://github.com/github/mona-sans/blob/main/LICENSE" alt="Mona Sans License">here</a>.</p>
+    </div>
   </div>
 </footer>
