--- a/src/css/critical.css
+++ b/src/css/critical.css
@@ -1,3 +1,13 @@
+@font-face {
+  font-family: 'Mona Sans';
+  src:
+    url('/assets/fonts/Mona-Sans.woff2') format('woff2 supports variations'),
+    url('/assets/fonts/Mona-Sans.woff2') format('woff2-variations');
+  font-weight: 200 900;
+  font-stretch: 75% 125%;
+  font-display: optional;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -34,7 +44,7 @@ pwa-installer {
 }
 
 html {
-  font-family: Helvetica;
+  font-family: 'Mona Sans', system-ui, Helvetica, sans-serif;
   line-height: 1.5;
 }
 
