--- a/src/_includes/partials/footer.njk
+++ b/src/_includes/partials/footer.njk
@@ -39,7 +39,7 @@
     </div>
     <div class="textWidth">
       <h2>Legal</h2>
-      <p>This page uses "Mona Sans" (Copyright (c) 2022, GitHub). Check the License <a href="https://github.com/github/mona-sans/blob/main/LICENSE" alt="Mona Sans License">here</a>.</p>
+      <p>This page uses "Mona Sans" (Copyright (c) 2022, GitHub). <a href="https://github.com/github/mona-sans/blob/main/LICENSE" alt="Mona Sans License">Check the License here.</a></p>
     </div>
   </div>
 </footer>
