--- a/src/_includes/layouts/main.njk
+++ b/src/_includes/layouts/main.njk
@@ -65,15 +65,15 @@
     {% include "../partials/footer.njk" %}
 
     <!-- Matomo -->
-    <!-- <script>
-      var _paq = window._paq = window._paq || [];
-      /* tracker methods like "setCustomDimension" should be called before "trackPageView" */
+    <script defer>
+      let _paq = window._paq = window._paq || [];
       _paq.push(['trackPageView']);
       _paq.push(['enableLinkTracking']);
       _paq.push(['setTrackerUrl', 'https://matomo.hoeser.dev/matomo.php']);
       _paq.push(['setSiteId', '1']);
-    </script> -->
-    <!-- <script src="https://matomo.hoeser.dev/matomo.js" defer></script> -->
+    </script>
+    <script defer src="https://matomo.hoeser.dev/matomo.js"></script>
+    <noscript><p><img src="https://matomo.hoeser.dev/matomo.php?idsite=1&amp;rec=1" style="border:0;" alt="" /></p></noscript>
     <!-- End Matomo Code -->
   </body>
 </html>
